# blogging

./: .env.example  .gitignore  README.md  pyproject.toml
config/: editor_options.json  emphasis.yaml  models.yaml  personas.json  photo_categories.yaml  power_shortcuts.json  structure_styles.yaml  style_pool.yaml
config/editor_previews/: manifest.json
config/prompts/: common_style.md  default.md  product.md  restyle.md  thumbnail.md  tones.yaml  (+1 more)
docs/: agent-cloud-protocol.md  naver-search-api.md  saas-architecture.md
packaging/: app_entry.py  autoblog.spec  build_macos.sh
scripts/: capture_draft_delete.py  capture_image_resize.py  probe_ai_label.py  probe_align_dom.py  probe_align_heal.py  probe_drag_reorder.py  probe_drag_reorder2.py  probe_drag_reorder3.py  probe_emphasis_speed.py  probe_image_resize.py  probe_import_media.py  probe_inplace_executor.py  probe_inplace_realsave.py  probe_inplace_rebuild.py  probe_insert_above_video.py  probe_insert_before_first.py  probe_insert_between.py  probe_palette_delta.py  probe_photo_rebuild.py  probe_reorder_and_video.py  probe_rep_photo.py  probe_reserve_ui.py  probe_selection_signal.py  probe_sticker_align.py  probe_test_draft_structure.py  probe_video_upload.py  profile_publish_waits.py  verify_swatch_apply.py
tests/: test_collect.py  test_config.py  test_draft.py  test_editor_urls.py  test_emphasis.py  test_photo_caption.py  test_photos.py  test_pipeline.py  test_place_detail.py  test_product.py  test_publish_plan.py  test_rank.py  test_restyle.py  test_stickers.py  test_style.py  test_thumbnail.py  test_tones.py
(+40 files in other folders)
