[project]
name = "autoblog"
version = "0.1.0"
description = "로컬 LLM 기반 네이버 블로그 자동 작성 서비스 (백엔드)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "playwright>=1.44",
    "pillow>=12.2.0",
    "anthropic>=0.112.0",
    "openai>=1.97",
    "google-genai>=1.0",
]

[project.scripts]
autoblog = "autoblog.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoblog"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
